KNMSC-16 Completed initial EDA of CMAPSS.

--- a/C-MAPSS EDA.ipynb
+++ b/C-MAPSS EDA.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a199c4db",
+   "metadata": {},
+   "source": [
+    "**Keywords**: *Prognostic Health Management*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "508b9ee3",
@@ -25,12 +33,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bacbf916",
+   "metadata": {},
+   "source": [
+    "Modern systems are currently monitored by multiple sensors that generates large volumes of data. For instance, for a Boeing 787, approximately 1000 parameters are continously monitored for the engine, leading to a total of 20 TB of data per flight hour.\n",
+    "\n",
+    "*Badea VE, Zamfiroiu A, Boncea R. \"Bigdata in the aerospace industry\". Inform Econ 2018; 22(1):17–24.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "756f3c93",
+   "metadata": {},
+   "source": [
+    "Important components in a turbofan engine as far as C-MAPSS data concerns are **Fan**, **Low Pressure Compressor (LPC)**, **High Pressure Compressor (HPC)**, **Low Pressure Turbine (LPT)**, and **High Pressure Turbine**. During the operation of engines, degradation occurs in each of the components. If degredation level in any component exceeds a threshold, the engine is said to have failed.\n",
+    "\n",
+    "- Jet engines are inspected before every take off, and this is a form of periodic maintenance that is not cost effective. Since the crucial nature of the operation, the strategy is justified to forsee possiblity of an engine to fail mid-air.\n",
+    "- Also a system that is capable of issuing early warnings may help responsibles to prepare for the problem, if not prevent altogether. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b1c8397d",
    "metadata": {},
    "source": [
-    "The time series data were collected from 21 sensors for each engine in the dataset.\n",
+    "This dataset was generated with C-MAPSS ('Commercial Modular Aero-Propulsion System Simulation') simulator. C-MAPSS is a tool for the simulation of realistic large commercial turbofan engine data. The time series data were collected from 21 sensors for each engine in the dataset.\n",
     "\n",
-    "- Engines were healthy in the early stages of operations and tended to degrade over time until a failure occurred."
+    "- Dataset contains data from same type of engine.\n",
+    "- Engines were healthy in the early stages of operations and tended to degrade over time until a failure occurred.\n",
+    "- Data was contaminated with sensor noise\n",
+    "\n",
+    "**Goal**: Predict the number of remaining operational cycles before a system failure occurs in the test set. "
    ]
   },
   {
