KNMSC-21 Implemented e2e inference for cmapss.

--- a/C-MAPSS EDA.ipynb
+++ b/C-MAPSS EDA.ipynb
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5960cdb8",
+   "id": "866196ac",
    "metadata": {},
    "outputs": [
     {
@@ -635,6 +635,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ec5acac7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13096, 18)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "44a12e6d",
    "metadata": {},
@@ -673,14 +694,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c91cda92",
+   "id": "7c54bdfe",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "64873d17",
+   "id": "c00adeee",
    "metadata": {},
    "source": [
     "#### Drop constant features - No effect on target regression"
@@ -689,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4464ffc9",
+   "id": "6cebb152",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "92ae58c6",
+   "id": "edf2963c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98d63896",
+   "id": "85ced286",
    "metadata": {},
    "source": [
     "#### Explore the correlations between features"
@@ -732,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "657ca779",
+   "id": "cfe1eaa9",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "46f038bc",
+   "id": "a39bfcdd",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "251df0cd",
+   "id": "abb055e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a2e2486d",
+   "id": "0d9e1c4e",
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1186,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7f1905ac",
+   "id": "8a47ec39",
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e29bb00",
+   "id": "66667507",
    "metadata": {
     "scrolled": false
    },
@@ -1359,7 +1380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea18b0ec",
+   "id": "19fdf8fd",
    "metadata": {},
    "source": [
     "## Feature Selection"
@@ -1368,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3ddc8ac7",
+   "id": "b2ea7b13",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cde65d37",
+   "id": "e9331c2c",
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba75d83c",
+   "id": "3b32acc3",
    "metadata": {},
    "source": [
     "### Apply feature transformations to test set"
@@ -1458,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1db21896",
+   "id": "b92cce64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ddd2d59",
+   "id": "1e4a7ef0",
    "metadata": {},
    "source": [
     "#### Create final train and test sets"
@@ -1480,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "829475ce",
+   "id": "cc5bc038",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,17 +1514,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7c3f3b8",
+   "id": "6ec34857",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_train.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9a7ae682",
+   "id": "ca52453d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "41ba8bbb",
+   "id": "de0ef01a",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "36172a35",
+   "id": "23c106c1",
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1714,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f1c6b471",
+   "id": "a505cbc4",
    "metadata": {},
    "outputs": [
     {
@@ -1816,7 +1835,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e89ed66f",
+   "id": "28834d4e",
    "metadata": {},
    "outputs": [],
    "source": [
