KNMSC-11 Implemented PrdMnt widget.

--- a/C-MAPSS Inference.ipynb
+++ b/C-MAPSS Inference.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a58ff958",
+   "id": "cd2a7c0f",
    "metadata": {},
    "source": [
     "# Read Data"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "680b250c",
+   "id": "23d7ec1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e709cd5a",
+   "id": "a7ec1006",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80f762b3",
+   "id": "595a9944",
    "metadata": {},
    "source": [
     "# Data Preprocessing"
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "57367905",
+   "id": "6e2469f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce4e93ba",
+   "id": "a7b61cf1",
    "metadata": {},
    "source": [
     "### Save scaler to reuse on streaming test data later"
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d875a632",
+   "id": "578a68a9",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5687b313",
+   "id": "7f7953e3",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a08fa25d",
+   "id": "ef53aec9",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "54e68ad4",
+   "id": "9d4a1fb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "017a9967",
+   "id": "4810e22b",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "52362f19",
+   "id": "d1ea8885",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4f883b83",
+   "id": "31f3d6cc",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "06df6896",
+   "id": "a89d9eb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bbe2d1f1",
+   "id": "471790be",
    "metadata": {},
    "outputs": [
     {
@@ -332,8 +332,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b0303e6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([122.752, 120.34 ,  61.   ,  78.674,  91.256,  88.434,  98.976,\n",
+       "        74.766, 117.968,  97.26 ,  82.634,  87.466,  88.322, 115.412,\n",
+       "       119.242, 101.172,  51.998,  60.142,  87.562,  22.848,  71.726,\n",
+       "       123.238, 110.962,  32.64 , 121.196, 106.718,  88.296,  80.514,\n",
+       "        95.31 ,  75.708,  20.078,  57.084, 114.244,   6.83 ,   8.532,\n",
+       "        23.094,  52.668,  51.2  , 122.256,  29.068,  63.828,  18.606,\n",
+       "        57.24 , 115.85 ,  69.192,  51.202, 105.656, 108.566,  16.05 ,\n",
+       "       105.486,  85.508,  34.448,  33.89 , 117.184, 100.378,  13.656,\n",
+       "        79.494,  46.26 , 114.68 ,  81.23 ,  41.672,  55.352,  59.702,\n",
+       "        42.974, 120.484,  17.056, 112.354,  17.366, 117.996,  83.28 ,\n",
+       "       112.388,  71.03 , 110.82 ,  82.306, 107.306,  12.982,  34.608,\n",
+       "       121.258,  89.922,  68.758,   7.444,   8.594, 110.02 ,  49.42 ,\n",
+       "       121.618,  79.384, 118.458, 113.532,  90.266,  38.148,  33.772,\n",
+       "        22.218,  51.08 ,  47.188, 104.442, 119.274,  77.486,  83.176,\n",
+       "       117.676,  20.378])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_preds"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "98df48b3",
+   "id": "41f3094f",
    "metadata": {},
    "source": [
     "### Save the model to disk"
@@ -342,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d80cffb",
+   "id": "598ef339",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c3739f5",
+   "id": "bc35f726",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -360,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4cb29d2",
+   "id": "e70a53b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63b2b2cc",
+   "id": "4abb2960",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fc29314",
+   "id": "dd044cae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ce4823f",
+   "id": "c6967393",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4b8675a",
+   "id": "939e8413",
    "metadata": {},
    "outputs": [],
    "source": []
